--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -15,3 +15,6 @@
 .cc {
     @apply flex items-center justify-center;
 }
+.input {
+    @apply px-4 py-1 border border-gray-300 rounded hover:border-blue-500 focus:border-blue-500;
+}
