--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -9,6 +9,9 @@
 .button {
     @apply bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-500;
 }
+.button-secondary {
+    @apply text-xs text-blue-500 hover:bg-gray-100 hover:border-blue-500 border border-gray-300 rounded px-1 py-1;
+}
 .tag {
     @apply text-white px-2 py-1 leading-none inline-block rounded-full text-sm;
 }
