--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -32021,6 +32021,13 @@ video {
   color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
 
+.button-secondary.active {
+  --tw-bg-opacity: 1;
+  background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+
 .tag {
   display: inline-block;
   border-radius: 9999px;
