--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -12,6 +12,12 @@
 .button-secondary {
     @apply text-xs text-blue-500 hover:bg-gray-100 hover:border-blue-500 border border-gray-300 rounded px-1 py-1;
 }
+.button-secondary.normal {
+    @apply text px-2 py-1;
+}
+.button-secondary.active {
+    @apply bg-blue-500 text-white;
+}
 .tag {
     @apply text-white px-2 py-1 leading-none inline-block rounded-full text-sm;
 }
