--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -32021,6 +32021,15 @@ video {
   color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
 
+.button-secondary.normal {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .button-secondary.active {
   --tw-bg-opacity: 1;
   background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
