--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -27,3 +27,9 @@
 .input {
     @apply px-4 py-2 border border-gray-300 rounded hover:border-blue-500 focus:border-blue-500;
 }
+.dropdown {
+    @apply bg-white p-2 shadow-lg border border-gray-300 rounded;
+}
+.item {
+    @apply cursor-pointer px-2 py-2 hover:bg-gray-100 hover:text-blue-500 flex items-center;
+}
