--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -31,5 +31,5 @@
     @apply bg-white p-2 shadow-lg border border-gray-300 rounded;
 }
 .item {
-    @apply cursor-pointer px-2 py-2 hover:bg-gray-100 hover:text-blue-500 flex items-center;
+    @apply cursor-pointer px-2 py-2 hover:bg-gray-100 hover:text-blue-500 flex items-center w-full;
 }
