batch create wip

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -33,3 +33,6 @@
 .item {
     @apply cursor-pointer px-2 py-2 hover:bg-gray-100 hover:text-blue-500 flex items-center w-full;
 }
+.text-label {
+    @apply text-sm text-gray-500;
+}
