--- a/src/styles/tailwind-output.css
+++ b/src/styles/tailwind-output.css
@@ -32117,6 +32117,13 @@ video {
   color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
 
+.text-label {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
